Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-52969

winrtrunner does not work for debug builds on msvc2015

    XMLWordPrintable

Details

    • WinRT
    • c24403b1dbe8d1b7bc27e2d1e11fd5cddd4ae1b9

    Description

      WinRTRunner fails to launch an application in debug mode.

      The reason is that for debug builds a hard dependency on ucrtd.dll and ws_32d.dll is created. Those dlls are not part of the c-runtime package and cannot be found.

      There is two ways to fix this:
      a) Get rid of the dependency. Problem is that we have had troubles with different malloc/free in that case in the past
      b) Figure out what Visual Studio does as that is able to successfully deploy and launch the app. Either it adds another dependency (which is not revealed in the manifext) or it has some launch arguments or such.

      Attachments

        For Gerrit Dashboard: QTBUG-52969
        # Subject Branch Project Status CR V

        Activity

          People

            mkalinow Maurice Kalinowski
            mkalinow Maurice Kalinowski
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes